--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+#ignore database.yml
+/config/database.yml
+
+
 /public/packs
 /public/packs-test
 /node_modules
